# whitespace-format

./: .flake8  .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  profile.sh  pylintrc  pyproject.toml  test_whitespace_format.py  test_whitespace_format2.py  whitespace_format.py  whitespace_format2.py
.circleci/: config.yml
.github/workflows/: build.yaml  publish-to-pypi.yaml  publish-to-pypi.yaml.yml  publish-to-test-pypi.yaml
test_data/: linux-end-of-line-markers.txt  mac-end-of-line-markers.txt  windows-end-of-line-markers.txt
