[tool.poetry]
name = "whitespace-format"
version = "0.0.1"
description = "Linter and formatter for source code files and text files"
license = "MIT"
authors = ["David Pal <davidko.pal@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/DavidPal/whitespace-format"
repository = "https://github.com/DavidPal/whitespace-format"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.scripts]
whitespace-format = 'whitespace_format:main'

[tool.poetry.dependencies]
python = "^3.7.5"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
coverage = "^7.2.1"
flake8 = "^5.0.4"
isort = {extras = ["colors"], version = "^5.11.5"}
mypy = "^1.0.1"
pytest = "^7.2.1"
pylint = "^2.16.2"
pylint-quotes = "^0.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
force_single_line = true
line_length = 100
multi_line_output = 3
