[tool.poetry]
name = "whitespace-format"
version = "0.0.6"
description = "Linter and formatter for source code files and text files"
license = "MIT"
authors = ["David Pal <davidko.pal@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/DavidPal/whitespace-format"
repository = "https://github.com/DavidPal/whitespace-format"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.scripts]
whitespace-format = "whitespace_format:main"

[tool.poetry.dependencies]
python = "^3.8.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
coverage = "^7.2.4"
flake8 = "^5.0.4"
flake8-absolute-import = "^1.0.0.1"
isort = {extras = ["colors"], version = "^5.11.5"}
mypy = "^1.4.1"
pydocstyle = {extras = ["toml"], version = "^6.3.0"}
pytest = "^7.4.1"
pylint = "^2.17.5"
pylint-quotes = "^0.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
force_single_line = true
line_length = 100
multi_line_output = 3

[tool.pydocstyle]
# List of rules (error codes) that should be enforced by pydocstyle.
# Complete list of codes can be found at: http://www.pydocstyle.org/en/stable/error_codes.html
# Keep the list below in lexicograhic order!
select = "D101,D102,D103,D105,D200,D201,D204,D205,D206,D207,D208,D209,D210,D211,D212,D300,D400,D403,D405,D411,D416,D419"
